<resources>
    <string name="app_name">タブレットの狼\n(Wolves In Tablet)</string>
    <string name="common_text_ok">ＯＫ</string>
    <string name="common_text_cancel">キャンセル</string>
    <string name="common_text_warning">警告</string>
    <string name="common_text_check">確認</string>
    <string name="report_text_error">エラー</string>
    <string name="report_text_send">送信</string>
    <string name="report_text_bug_report">予期しないエラーが発生しました。開発元にエラーを送信してください。</string>
    <string name="main_start_button">スタート</string>
    <string name="main_players_button">プレイヤー設定</string>
    <string name="main_roles_button">役職調整</string>
    <string name="main_help_button">ヘルプ</string>
    <string name="players_add_button">追加</string>
    <string name="players_del_button">削除</string>
    <string name="players_all_textView">全てチェック</string>
    <string name="players_add_name_textView">名前</string>
    <string name="players_add_male_radioButton">男性</string>
    <string name="players_add_female_radioButton">女性</string>
    <string name="roles_number_textView">プレイヤー%d人</string>
    <string name="roles_max_button">最大人数%d人</string>
    <string name="roles_none_radioButton">ランダムにしない</string>
    <string name="roles_ramdam_radioButton">人狼以外をランダムにする</string>
    <string name="roles_werewolves_random_radioButton">全てをランダムにする</string>
    <string name="roles_text_warning_min">プレイヤーを%d人以上指定してください</string>
    <string name="roles_text_warning_max">最大人数を超えています。最大人数を変更してください</string>
    <string name="roles_text_warning_role">設定人数がプレイ人数を超えています</string>
    <string name="help_version_textView">Version %s</string>
    <string name="help_content_textView">このゲームは「汝は人狼なりや？」または「人狼ゲーム」と呼ばれるパーティーゲームである。５人以上(推奨８人以上。４人でもワンナイト人狼のルールならプレイ可能)でプレイ可能(初期設定は最大２４人。変更可能)。\n
日本においてもっとも普及しているイタリアのdaVinci社が販売している「Lupus in Tabula(タブラの狼)」がベースになっている。\n
「Lupus in Tabula」にある基本の３種類と８種類の特殊な役職に加え、「ミラーズホロウの人狼」や「究極の人狼」等を参考にした１８種類の独自の役職がある。\n
このゲームは役職の人数を自由に変えることができる。また、設定された人数の範囲内でランダムな人数を出現させることもできる(人狼や預言者が何人いるか判らない状態でプレーする事ができる)。\n
基本的な遊び方\n
プレイヤーはそれぞれが村人と村人に化けた人狼となり、自分自身の正体がばれないように他のプレイヤーと交渉して正体を探る。\n
ゲームは半日単位で進行し、昼には全プレイヤーの投票により決まった人狼容疑者の処刑が、夜には人狼による村人の捕食が行われる。\n
昼と夜を繰り返し、ゲーム終了条件がどれか一つ満たされた時点で、ゲーム終了となる。\n
４人での遊び方(ワンナイト人狼)はダミープレイヤー２人を追加する。その他は適当。最初の夜にダミープレイヤーを確認し、人狼がいればやり直す。\n
二日目の昼にダミープレイヤーを処刑し、その夜の間に人狼はもう一人のダミープレイヤーを殺す。預言者はダミープレイヤーを占う。ゲームは三日目の昼から開始する。\n\n
ゲーム終了条件\n
【村人側の勝利】人狼がすべて死亡した\n
【人狼側の勝利】村人の数が、人狼の数と等しくなった\n
【ハムスター変化の勝利】村人か人狼、どちらかが勝利条件を満たした時、自分が生存していればそのチームの代わりに勝者となる。\n
【悪魔の勝利】人狼の捕食対象に選ばれた後、昼の投票で処刑されることで勝者となる。\n
【カルト教団の勝利】生き残っているのが、カルトリーダーとカルト信者だけなら勝者となる。\n
【道化師の勝利】処刑された時点で勝者となる。\n
【恋人達の勝利】村人と人狼が恋人になった時、２人が最後まで生きていれば勝者となる。\n
\n「タブラの狼＋」の役職(Lupus in Tabulaの役職)\n
人狼(Werewolf) － 夜の間に人狼以外のプレイヤーを1人指定し、殺すことができる。人狼は他の人狼を全て把握できる。\n
村人(Villager) － 何も能力を持たない一般の村人である。\n
預言者(Seer) － 夜の間にプレイヤーの中から1人を指定し、そのプレイヤーが村人か人狼かを知ることができる。また、ハムスター変化のプレイヤーを殺すことができる。\n
霊媒師(Medium) － 夜の間に、その日の処刑者が村人なのか人狼なのかを知ることができる。\n
憑依者(Possessed) － 村人ですが人狼の陣営に参加している。終了条件の判断時にも村人として扱われるが、人狼が勝利することで勝利となる。\n
護衛(Bodyguard) － 夜の間にプレイヤーの中から1人を指定し、そのプレイヤーを人狼の捕食から守ることができる。守った対象と、人狼の捕食対象が一致した場合、そのプレイヤーは殺されずに済む。\n
疫病神(Owl-man) － 夜の間に、プレイヤーを1人指定する。次の日の昼の投票後、投票数が多かった上位の中に指定されたプレイヤーがいなかった場合、指定されたプレイヤーを容疑者に追加する。\n
フリーメーソン(Freemasons) － 2人一組の役職であり、お互いがお互いを認識できる。つまり自分以外に1人、人狼でないプレイヤーを知ることができる。\n
ハムスター変化(Werehamster) － 仲間を持たない単独の勢力。人狼に捕食されることはないが、預言者に指定されると死んでしまう。霊媒師には村人と判断され、終了条件の判断時にも村人として扱われる。\n
背信者(Mythomaniac) － 2度目の夜に一度だけ生き残っているプレイヤーを1人指定する。そのプレイヤーが人狼か預言者なら、指定したプレイヤーの能力を得る。それ以外の場合は村人になる。\n
悪魔(Devil) － 仲間を持たない単独の勢力。人狼に捕食されることはない。預言者には村人と判断されるが、霊媒師には人狼と判断される。\n
狩人(追加) － 人狼に捕食されたとき、復讐としてプレイヤーを1人殺害できる。殺す対象を指定するのは狩人で必ずしも人狼を殺せる訳ではない。\n
薬剤師(追加) － 一般の村人だが、人狼に捕食されたとき、次の日の夜の人狼の襲撃がなくなる。\n
仲人(追加) － 2度目の夜に任意の2人のプレイヤーを指定する。指定された2人は「恋人」となる。恋人達は片方が死んだ場合残りの片方も死ぬ。\n
魔女(追加) － 治癒薬と毒薬を一つずつ持っており、夜の間にそれを使用することが可能。治癒薬は殺害されてすぐのプレイヤーを蘇生できる。毒薬は使った相手を殺害できる。\n
預言者見習い(追加) － 最初は一般の村人だが、預言者が死んだ時預言者になる。\n
祈祷師(追加) － 夜の間に、プレイヤーを1人指定する。疫病神によって指定されたプレイヤーと一致した場合、次の日の昼の投票の容疑者に追加されない。\n
聖職者(追加) － 昼の投票で処刑者になった場合一回だけ処刑を回避できる。\n
村長(追加) － 一般の村人だが、昼の投票が2票分となる。\n
墓守(追加) － 最初は一般の村人だが、人狼の捕食対象になった場合、人狼になる。\n
老婆(追加) － 寿命があり、それは生き残っている人狼×2日。それを過ぎると例え襲撃されていなくても死亡する。\n
魔術師(追加) － 夜の間にプレイヤーの中から1人を指定し、そのプレイヤーが仲間を持たない単独の勢力なのかを知ることができる。\n
妖術師(追加) － 夜の間にプレイヤーの中から1人を指定し、そのプレイヤーが預言者なのかを知ることができる。人狼が勝利することで勝利となる。\n
盗賊(追加) － 2度目の夜、プレイヤーを1人指定する。そのプレイヤーと役職が入れ替わる。指定されたプレイヤーは村人になる。\n
タフガイ(追加) － 一般の村人だが、人狼に捕食されたとき、一度だけ死なない。\n
カルトリーダー(追加) － 夜の間に、プレイヤーを1人指定する。指定されたプレイヤーはカルト信者になる。\n
カルト信者(追加) － カルトリーダーによってカルト信者となったプレイヤー。特殊能力を持っていた場合、その能力は失う。\n
妖狐(追加) － 2度目の夜に生き残っているプレイヤーの役職に変わる。どのプレイヤーになるかは判らない。\n
道化師(追加) － 仲間を持たない単独の勢力。処刑された時点で勝者となる。\n

\nCopyright &#169; 2013 M.Nakamura</string>
    <string name="opening_message_textView">人里はなれたタブラの村に、人狼が現れた。\n
夜ごと村人の何人かが狼に変身し、罪の無い犠牲者を虐殺して破壊衝動を満たしている。\n
朝になると、生き残った村人は集まり、この問題について話し合う。\n
その後、村のなかで人狼と思われる１人を、処刑するのだ。\n
この虐殺の果てに生き残るのは、誰なのだろう？</string>
    <string name="night_title_textView">第%d夜</string>
    <string name="night_action_text">%sさんの夜の行動を実行します</string>
    <string name="moning_title_textView">夜が明け朝になりました</string>
    <string name="moning_died_message_text">亡くなった方は%sさんです\n</string>
    <string name="moning_no_died_text">亡くなった方はいません\n</string>
    <string name="moning_doubt_message_text">疑われている方は%sさんです</string>
    <string name="noon_title_textView">お昼になりました</string>
    <string name="noon_message_textView">疑わしい人を話し合って探してください。投票は過半数を超える票を集める人がでるまで、再投票します。再投票は上位２名と２位と同票の人です。</string>
    <string name="noon_inclement_button">＋</string>
    <string name="noon_declement_button">－</string>
    <string name="noon_start_button">スタート</string>
    <string name="vote_title_textView">投票</string>
    <string name="vote_action_text">%sさんが投票します</string>
    <string name="vote_action_execute_text">%sさんに投票します</string>
    <string name="judgement_title_textView">審判</string>
    <string name="judgement_revote_message_text">再投票になりました\n候補者は%sさんです</string>
    <string name="judgement_died_message_text">処刑された方は%sさんです</string>
    <string name="judgement_no_died_text">処刑された方はいません</string>
    <string name="judgement_result_text">さん － %d票\n</string>
    <string-array name="roles_names">
        <item name="role_name_werewolf">人狼</item>
        <item name="role_name_villager">村人</item>
        <item name="role_name_seer">預言者</item>
        <item name="role_name_medium">霊媒師</item>
        <item name="role_name_possessed">憑依者</item>
        <item name="role_name_bodyguard">護衛</item>
        <item name="role_name_owl_man">疫病神</item>
        <item name="role_name_freemasons">フリーメーソン</item>
        <item name="role_name_werehamster">ハムスター変化</item>
        <item name="role_name_mythomaniac">オカルトマニア</item>
        <item name="role_name_devil">悪魔</item>
        <item name="role_name_hunter">狩人</item>
        <item name="role_name_apothecary">薬剤師</item>
        <item name="role_name_matchmaker">仲人</item>
        <item name="role_name_witch">魔女</item>
        <item name="role_name_scryer">預言者見習い</item>
        <item name="role_name_oracle">祈祷師</item>
        <item name="role_name_hierophant">聖職者</item>
        <item name="role_name_magistrate">村長</item>
        <item name="role_name_gravedigger">墓守</item>
        <item name="role_name_crone">老婆</item>
        <item name="role_name_warlock">魔術師</item>
        <item name="role_name_necromancer">妖術師</item>
        <item name="role_name_thief">盗賊</item>
        <item name="role_name_toughgay">タフガイ</item>
        <item name="role_name_cult_leader">カルトリーダー</item>
        <item name="role_name_cultist">カルト信者</item>
        <item name="role_name_mystic">妖狐</item>
        <item name="role_name_fool">道化師</item>
    </string-array>
    <string-array name="roles_details">
        <item name="role_detail_werewolf">夜の間に人狼以外のプレイヤーを1人指定し、殺すことができる。人狼は他の人狼を全て把握できる。</item>
        <item name="role_detail_villager">何も能力を持たない一般の村人である。</item>
        <item name="role_detail_seer">夜の間にプレイヤーの中から1人を指定し、そのプレイヤーが村人か人狼かを知ることができる。また、ハムスター変化のプレイヤーを殺すことができる。</item>
        <item name="role_detail_medium">夜の間に、その日の処刑者が村人なのか人狼なのかを知ることができる。</item>
        <item name="role_detail_possessed">村人ですが人狼の陣営に参加している。終了条件の判断時にも村人として扱われるが、人狼が勝利することで勝利となる。</item>
        <item name="role_detail_bodyguard">夜の間にプレイヤーの中から1人を指定し、そのプレイヤーを人狼の捕食から守ることができる。守った対象と、人狼の捕食対象が一致した場合、そのプレイヤーは殺されずに済む。</item>
        <item name="role_detail_owl_man">夜の間に、プレイヤーを1人指定する。次の日の昼の投票後、投票数が多かった上位の中に指定されたプレイヤーがいなかった場合、指定されたプレイヤーを容疑者に追加する。</item>
        <item name="role_detail_freemasons">2人一組の役職であり、お互いがお互いを認識できる。つまり自分以外に1人、人狼でないプレイヤーを知ることができる。</item>
        <item name="role_detail_werehamster">仲間を持たない単独の勢力。人狼に捕食されることはないが、預言者に指定されると死んでしまう。霊媒師には村人と判断され、終了条件の判断時にも村人として扱われる。</item>
        <item name="role_detail_mythomaniac">2度目の夜に一度だけ生き残っているプレイヤーを1人指定する。そのプレイヤーが人狼か預言者なら、指定したプレイヤーの能力を得る。それ以外の場合は村人になる。</item>
        <item name="role_detail_devil">仲間を持たない単独の勢力。人狼に捕食されることはない。預言者には村人と判断されるが、霊媒師には人狼と判断される。</item>
        <item name="role_detail_hunter">人狼に捕食されたとき、復讐としてプレイヤーを1人殺害できる。殺す対象を指定するのは狩人で必ずしも人狼を殺せる訳ではない。</item>
        <item name="role_detail_apothecary">一般の村人だが、人狼に捕食されたとき、次の日の夜の人狼の襲撃がなくなる。</item>
        <item name="role_detail_matchmaker">2度目の夜に任意の2人のプレイヤーを指定する。指定された2人は「恋人」となる。恋人達は片方が死んだ場合残りの片方も死ぬ。</item>
        <item name="role_detail_witch">治癒薬と毒薬を一つずつ持っており、夜の間にそれを使用することが可能。治癒薬は殺害されてすぐのプレイヤーを蘇生できる。毒薬は使った相手を殺害できる。</item>
        <item name="role_detail_scryer">最初は一般の村人だが、預言者が死んだ時預言者になる。</item>
        <item name="role_detail_oracle">夜の間に、プレイヤーを1人指定する。疫病神によって指定されたプレイヤーと一致した場合、次の日の昼の投票の容疑者に追加されない。</item>
        <item name="role_detail_hierophant">昼の投票で処刑者になった場合一回だけ処刑を回避できる。</item>
        <item name="role_detail_magistrate">一般の村人だが、昼の投票が2票分となる。</item>
        <item name="role_detail_gravedigger">最初は一般の村人だが、人狼の捕食対象になった場合、人狼になる。</item>
        <item name="role_detail_crone">寿命があり、それは生き残っている人狼×2日。それを過ぎると例え襲撃されていなくても死亡する。</item>
        <item name="role_detail_warlock">夜の間にプレイヤーの中から1人を指定し、そのプレイヤーが仲間を持たない単独の勢力なのかを知ることができる。</item>
        <item name="role_detail_necromancer">夜の間にプレイヤーの中から1人を指定し、そのプレイヤーが預言者なのかを知ることができる。人狼が勝利することで勝利となる。</item>
        <item name="role_detail_thief">2度目の夜、プレイヤーを1人指定する。そのプレイヤーと役職が入れ替わる。指定されたプレイヤーは村人になる。</item>
        <item name="role_detail_toughgay">一般の村人だが、人狼に捕食されたとき、一度だけ死なない。</item>
        <item name="role_detail_cult_leader">夜の間に、プレイヤーを1人指定する。指定されたプレイヤーはカルト信者になる。</item>
        <item name="role_detail_cultist">カルトリーダーによってカルト信者となったプレイヤー。特殊能力を持っていた場合、その能力は失う。</item>
        <item name="role_detail_mystic">2度目の夜に生き残っているプレイヤーの役職に変わる。どのプレイヤーになるかは判らない。</item>
        <item name="role_detail_fool">仲間を持たない単独の勢力。処刑された時点で勝者となる。</item>
    </string-array>
    <string-array name="roles_messages">
        <item>捕食対象のプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>占うプレーヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>護衛するプレイヤーを選んでください</item>
        <item>呪うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>その役職になりたいと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>復讐するプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>呪いを解くプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>占うプレーヤーを選んでください</item>
        <item>占うプレーヤーを選んでください</item>
        <item>盗みを働くプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>カルト信者にするプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
        <item>人狼だと思うプレイヤーを選んでください</item>
    </string-array>
</resources>