<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/noon_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/noon_title_textView"
        android:textSize="@dimen/noon_title_textSize" />

    <TextView
        android:id="@+id/noon_message_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noon_title_textView"
        android:layout_centerHorizontal="true"
        android:text="@string/noon_message_textView"
        android:textSize="@dimen/noon_message_textSize" />

    <TextView
        android:id="@+id/noon_timer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noon_message_textView"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/noon_timer_textSize" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noon_timer_textView"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/noon_inclement_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickInclementButton"
            android:text="@string/noon_inclement_button" />

        <Button
            android:id="@+id/noon_declement_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/noon_inclement_button"
            android:onClick="onClickDeclementkButton"
            android:text="@string/noon_declement_button" />

        <Button
            android:id="@+id/noon_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/noon_declement_button"
            android:onClick="onClickStartButton"
            android:text="@string/noon_start_button" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickOkButton"
        android:text="@string/common_text_ok" />

</RelativeLayout>