<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

	<RelativeLayout 
	    android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical">

		<TextView android:id="@+id/help_title_textView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
       		android:layout_centerHorizontal="true"
			android:text="@string/app_name"
			android:textSize="@dimen/help_title_textSize" />
	    
		<TextView android:id="@+id/help_version_textView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/help_title_textView"
       		android:layout_centerHorizontal="true"
			android:text="@string/help_version_textView"
			android:textSize="@dimen/help_version_textSize" />
			    
		<TextView android:id="@+id/help_content_textView"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@+id/help_version_textView"
			android:text="@string/help_content_textView"
			android:textSize="@dimen/help_content_textSize" />

		<Button
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/help_content_textView" 
			android:text="@string/common_text_ok"
			android:onClick="onClickOkButton" />
	</RelativeLayout>

</ScrollView>