<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView android:id="@+id/players_add_name_textView"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_alignParentTop="true"
		android:text="@string/players_add_name_textView" />

	<EditText android:id="@+id/players_add_player_editText"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_below="@+id/players_add_name_textView"
		android:ems="10" 
		android:inputType="text" />

	<RadioGroup android:id="@+id/players_add_radiogroup"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" 
		android:layout_below="@+id/players_add_player_editText"
		android:orientation="horizontal">

		<RadioButton android:id="@+id/players_add_male_radioButton"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="true" 
			android:text="@string/players_add_male_radioButton" />

		<RadioButton android:id="@+id/players_add_female_radioButton"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/players_add_female_radioButton" />

	</RadioGroup>

	<Button
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/players_add_radiogroup" 
		android:text="@string/common_text_ok"
		android:onClick="onClickOkButton" />

</RelativeLayout>