<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/roles_header_relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/roles_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/roles_number_textView" />

            <Button
                android:id="@+id/roles_max_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="onClickMaxButton"
                android:text="@string/roles_max_button" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/roles_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roles_header_relativeLayout"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/roles_none_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/roles_none_radioButton" />

            <RadioButton
                android:id="@+id/roles_ramdam_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roles_ramdam_radioButton" />

            <RadioButton
                android:id="@+id/roles_werewolves_random_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roles_werewolves_random_radioButton" />
        </RadioGroup>

        <TableLayout
            android:id="@+id/roles_tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roles_radioGroup"
            android:layout_centerHorizontal="true" >
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roles_tableLayout"
            android:layout_centerHorizontal="true"
            android:onClick="onClickOkButton"
            android:text="@string/common_text_ok" />
    </RelativeLayout>

</ScrollView>