<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2013 M.Nakamura
 *
 * This software is licensed under a Creative Commons
 * Attribution-NonCommercial-ShareAlike 2.1 Japan License.
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 		http://creativecommons.org/licenses/by-nc-sa/2.1/jp/legalcode
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/opening" />

    <TextView
        android:id="@+id/main_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/main_title_marginBottom"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="@dimen/main_title_textSize" />

    <Button
        android:id="@+id/main_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickStartButton"
        android:text="@string/main_start_button"
        android:textSize="@dimen/main_start_textSize" />

    <RelativeLayout
        android:id="@+id/main_option_relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_option_marginTop" >

        <Button
            android:id="@+id/main_players_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPlayersButton"
            android:text="@string/main_players_button"
            android:textSize="@dimen/main_option_textSize" />

        <Button
            android:id="@+id/main_roles_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_players_button"
            android:onClick="onClickRolesButton"
            android:text="@string/main_roles_button"
            android:textSize="@dimen/main_option_textSize" />
    </RelativeLayout>

    <Button
        android:id="@+id/main_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_option_relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_option_marginTop"
        android:onClick="onClickHelpButton"
        android:text="@string/main_help_button"
        android:textSize="@dimen/main_option_textSize" />

</RelativeLayout>